# clacky

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  clacky.spec  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
clacky/: __init__.py  cli.py  companion.py  config.py  connections.py  oauth.py
clacky/agent/: __init__.py  actuation.py  computer_loop.py  fileops.py  journal.py  narrator.py  permission.py  planner.py  runtime.py  sdk_tools.py  session.py
clacky/providers/: __init__.py  base.py  claude.py  factory.py  gemini.py  heuristic.py  ollama.py  openai.py
clacky/shell/: .env.example  README.md  SETUP.md  SOUL.md  VENDORED.md  acp_client.py  actions.py  agent_skills.py  companion_manager.py  config.py  google_workspace.py  harness.py  hotkey.py  main.py  memory_store.py  routing.py  session_log.py  tour.py  tutor.py
clacky/shell/ai/: claude_provider.py  element_locator.py  github_copilot_provider.py  hybrid_pointer.py  model_registry.py  ollama_bootstrap.py  ollama_models_registry.py  web_search.py
clacky/shell/assets/: make_icon.py
clacky/shell/audio/: ambient_listener.py
clacky/shell/audio/stt/: deepgram_streaming.py  deepgram_stt.py
clacky/shell/audio/tts/: edge_tts_provider.py
clacky/shell/skills/: __init__.py  example_self_mode.py
clacky/shell/tutor_features/: collab.py  journal.py  lesson_recorder.py  pdf_context.py  workflow_capture.py
clacky/shell/ui/: connect_dialog.py  overlay.py  panel.py  setup_wizard.py  tray.py
docs/: AGENT_PLAN.md  BASE_ARCHITECTURE.md  BUILDING.md  BUILD_PLAN.md  CLI.md  SCOPE.md  USAGE.md
organizer/: __init__.py  executor.py  guards.py  planner.py  undo.py
packaging/: clacky_app.py
skills/: organize-desktop.md  organize_desktop.py
skills/community/: README.md
tests/: test_clacky_core.py  test_computer_loop.py  test_narrator.py  test_organizer.py  test_permission.py
